--- a/src/main/webapp/WEB-INF/Web.xml
+++ b/src/main/webapp/WEB-INF/Web.xml
@@ -5,24 +5,24 @@
 	version="3.0">
 	<display-name>Controle de Serviço</display-name>
 
-<!-- 	<servlet> -->
-<!-- 		<servlet-name>DispatcherServlet</servlet-name> -->
-<!-- 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> -->
-<!-- 		<load-on-startup>1</load-on-startup> -->
-<!-- 	</servlet> -->
+	<!-- <servlet> -->
+	<!-- <servlet-name>DispatcherServlet</servlet-name> -->
+	<!-- <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> -->
+	<!-- <load-on-startup>1</load-on-startup> -->
+	<!-- </servlet> -->
 
-<!-- 	<servlet-mapping> -->
-<!-- 		<servlet-name>DispatcherServlet</servlet-name> -->
-<!-- 		<url-pattern>/*</url-pattern> -->
-<!-- 	</servlet-mapping> -->
+	<!-- <servlet-mapping> -->
+	<!-- <servlet-name>DispatcherServlet</servlet-name> -->
+	<!-- <url-pattern>/*</url-pattern> -->
+	<!-- </servlet-mapping> -->
 
 
-<!-- 	<filter> -->
-<!-- 		<filter-name>filtroRequisicao</filter-name> -->
-<!-- 		<filter-class>br.com.cs.mvc.filtro.FiltroRequisicao</filter-class> -->
-<!-- 	</filter> -->
-<!-- 	<filter-mapping> -->
-<!-- 		<filter-name>filtroRequisicao</filter-name> -->
-<!-- 		<url-pattern>/*</url-pattern> -->
-<!-- 	</filter-mapping> -->
+	<filter>
+		<filter-name>filtroRequisicao</filter-name>
+		<filter-class>br.com.cs.mvc.filtro.FiltroRequisicao</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>filtroRequisicao</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
