Criação do flyway

--- a/pom.xml
+++ b/pom.xml
@@ -234,7 +234,15 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
-
+		
+		<!--FlyWay-->
+		
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<repositories>
